@@ -1,4 +1,7 @@
-1662.	[bug]		Change #1658 failed to one use of 'type' to 'keytype'.
+1664.	[bug]		nsupdate needed KEY for SIG(0), not DNSKEY.
+
+1662.	[bug]		Change #1658 failed to change one use of 'type'
+			to 'keytype'.
 
 1659.	[cleanup]	Cleanup some messages that were referring to KEY vs
                         DNSKEY, NXT vs NSEC and SIG vs RRSIG.
